@@ -5,6 +5,8 @@ dohpaZ (02/14/04)
 + Updated version to 5.0.0.6
 + Patch to fix QCursor issue.
 + More updates to work with 02/10/04 EQLive
++ Added the "Dockable" sub-menu to the View menu to control the dockability 
+  of various windows.
 
 dohpaZ (02/11/04)
 ---------------------
